Clean-up and working on 1.17.40